REG si DIS ca select

--- a/src/pages/instruments/02_cibs_ru.html
+++ b/src/pages/instruments/02_cibs_ru.html
@@ -36,14 +36,18 @@
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
                     <div>РЕГ. Область</div>
                     <div>
-                        <input type="text" id="reg" name="reg" disabled class="disabled:bg-gray-100 bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
+                        <select id="reg" name="reg" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                            <option value="-9" class="t_choose">--- choose ---</option>
+                        </select>
                     </div>
                 </div>
 
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
                     <div>РАЙ. Район</div>
                     <div>
-                        <input type="text" id="dis" name="dis" disabled class="disabled:bg-gray-100 bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
+                        <select id="dis" name="dis" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                            <option value="-9" class="t_choose">--- choose ---</option>
+                        </select>
                     </div>
                 </div>
 
