--- a/src/pages/instruments/02_cibs_uz.html
+++ b/src/pages/instruments/02_cibs_uz.html
@@ -1709,13 +1709,13 @@
                     </div>
                 </div>
 
-                <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <!-- <div class="grid grid-cols-2 gap-4 items-center mt-6">
                     <div>cg1c</div>
                     <div class="flex gap-4">
                         <input type="text" id="cg1c" name="cg1c"
                                class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
                     </div>
-                </div>
+                </div> -->
 
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
                     <div>
