--- a/src/pages/instruments/01_cpis_en.html
+++ b/src/pages/instruments/01_cpis_en.html
@@ -5572,14 +5572,14 @@
                                 class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
                         </td>
                         <td class="p-1">
-                            <select id="sh3_cse" name="sh3_cse"
+                            <!-- <select id="sh3_cse" name="sh3_cse"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                 <option value="-9" class="t_choose">--- choose ---</option>
                                 <option value="1">1. Transfer to another service within the child care system</option>
                                 <option value="2">2. Reintegration within the family</option>
                                 <option value="3">3. Adoption</option>
                                 <option value="4">4. Other</option>
-                            </select>
+                            </select> -->
                         </td>
                         <td class="p-1">
                             <input type="text" id="sh3_csf" name="sh3_csf"
