--- a/src/pages/instruments/01_cpis_ru.html
+++ b/src/pages/instruments/01_cpis_ru.html
@@ -5580,14 +5580,14 @@
                                 class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
                         </td>
                         <td class="p-1">
-                            <select id="sh3_cse" name="sh3_cse"
+                            <!-- <select id="sh3_cse" name="sh3_cse"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                 <option value="">-----</option>
                                 <option value="1">1. Перевод в другую службу системы опеки </option>
                                 <option value="2">2. Ре-интеграция в семью</option>
                                 <option value="3">3. Усыновление/удочерение</option>
                                 <option value="4">4. Другое</option>
-                            </select>
+                            </select> -->
                         </td>
                         <td class="p-1">
                             <input type="text" id="sh3_csf" name="sh3_csf"
