--- a/src/pages/instruments/01_cpis_uz.html
+++ b/src/pages/instruments/01_cpis_uz.html
@@ -5668,7 +5668,7 @@
                                 class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
                         </td>
                         <td class="p-1">
-                            <select id="sh3_cse" name="sh3_cse"
+                            <!-- <select id="sh3_cse" name="sh3_cse"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                 <option value="">-----</option>
                                 <option value="1">1. Bolalarni vasiylik tizimi doirasida boshqa xizmatga o&#39;tkazildi
@@ -5676,7 +5676,7 @@
                                 <option value="2">2. Oilaga qaytdi (reintegratsiya)</option>
                                 <option value="3">3. Farzandlikka olindi </option>
                                 <option value="4">4. Boshqa</option>
-                            </select>
+                            </select> -->
                         </td>
                         <td class="p-1">
                             <input type="text" id="sh3_csf" name="sh3_csf"
