--- a/src/pages/instruments/03_csr_en.html
+++ b/src/pages/instruments/03_csr_en.html
@@ -479,8 +479,8 @@
         
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
                     <div>E15. What was the employee&#39;s overall gross monthly salary in March 2024?</div>
-                    <div>
-                        <input type="text" id="e15" name="e15" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <div class="flex items-center gap-4">
+                        <input type="text" id="e15" name="e15" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" /> UZS
                     </div>
                 </div>
         
