--- a/src/pages/instruments/03_csr_uz.html
+++ b/src/pages/instruments/03_csr_uz.html
@@ -519,9 +519,9 @@
 
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
                     <div>E15. 2024 yil mart oyi uchin xodimning oylik umumiy ish haqi qancha edi?</div>
-                    <div>
+                    <div class="flex items-center gap-4">
                         <input type="text" id="e15" name="e15"
-                               class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                               class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" /> UZS
                     </div>
                 </div>
 
