--- a/src/pages/instruments/05a_tqyp_en.html
+++ b/src/pages/instruments/05a_tqyp_en.html
@@ -174,7 +174,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>PTR2b Patronymics</div>
+                <div>PTR2b. Patronymics</div>
                 <div>
                     <input type="text" id="ptr2b" name="ptr2b"
                         class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
@@ -248,7 +248,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>ptr5d. Settlement</div>
+                <div>PTR5d. Settlement</div>
                 <div>
                     <select id="ptr5d" name="ptr5d"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -368,7 +368,7 @@
 
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>a Name of the institution</div>
+                <div>a. Name of the institution</div>
                 <div class="flex items-center">
                     <input type="text" id="ptr8a" name="ptr8a"
                         class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
@@ -376,7 +376,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>b. Address::</div>
+                <div>b. Address:</div>
                 <div class="flex items-center">
                     <input type="text" id="ptr8b" name="ptr8b"
                         class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
@@ -384,7 +384,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>c. Phone number::</div>
+                <div>c. Phone number:</div>
                 <div class="flex items-center">
                     <input type="text" id="ptr8c" name="ptr8c"
                         class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
