--- a/src/pages/instruments/05a_tqyp_uz.html
+++ b/src/pages/instruments/05a_tqyp_uz.html
@@ -175,7 +175,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>PTR2b Otasining ismi</div>
+                <div>PTR2b. Otasining ismi</div>
                 <div>
                     <input type="text" id="ptr2b" name="ptr2b"
                         class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
@@ -249,7 +249,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>ptr5d. Aholi punkti</div>
+                <div>PTR5d. Aholi punkti</div>
                 <div>
                     <select id="ptr5d" name="ptr5d"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -372,7 +372,7 @@
 
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>a Muassasasining nomi</div>
+                <div>a. Muassasasining nomi</div>
                 <div class="flex items-center">
                     <input type="text" id="ptr8a" name="ptr8a"
                         class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
@@ -380,7 +380,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>b. Manzil::</div>
+                <div>b. Manzil:</div>
                 <div class="flex items-center">
                     <input type="text" id="ptr8b" name="ptr8b"
                         class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
@@ -388,7 +388,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>c. Telefon raqami::</div>
+                <div>c. Telefon raqami:</div>
                 <div class="flex items-center">
                     <input type="text" id="ptr8c" name="ptr8c"
                         class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
