--- a/src/pages/instruments/02_cibs_ru.html
+++ b/src/pages/instruments/02_cibs_ru.html
@@ -3531,13 +3531,12 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>7. Другое: у ребенка были проблемы с любой другой областью, не указанной выше. Просьба уточнить: …
+                <div class="flex flex-col gap-4">
+                    7. Другое: у ребенка были проблемы с любой другой областью, не указанной выше. Просьба уточнить: …
+                    <input type="text" id="predif7_other" name="predif7_other"
+                        class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
                 </div>
                 <div class="flex flex-col gap-2">
-                    <div class="flex items-center">
-                        <input type="text" id="predif7_other" name="predif7_other"
-                            class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                    </div>
                     <div class="flex items-center">
                         <input id="predif7-1" type="radio" value="1" name="predif7"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -6873,6 +6872,7 @@
                 </div>
             </div>
         </form>
+
         <footer id="footer" class="fixed bottom-0 w-full h-12 bg-slate-200 shadow">
             <div class="flex justify-center h-full items-center">
 
