--- a/src/pages/local/03_users.html
+++ b/src/pages/local/03_users.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8" />
-        <title>WorldBank</title>
+        <title>CRM Uzbek</title>
         <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
         <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src http: https: data: ; script-src 'self'; style-src 'self' 'unsafe-inline'" />
         <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; img-src http: https: data: ; script-src 'self'; style-src 'self' 'unsafe-inline'" />
