--- a/src/pages/instruments/05a_tqyp_uz.html
+++ b/src/pages/instruments/05a_tqyp_uz.html
@@ -58,10 +58,6 @@
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>STR3. Xizmatning lokatsiyasi (MHOBT kodi)</div>
-                <div>
-                    <input type="text" id="str3" name="str3"
-                        class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>a. Viloyat</div>
@@ -78,17 +74,21 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>c. Aholi punkti</div>
-                <div>
-                    <input type="text" id="str3c" name="str3c"
-                        class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                </div>
-            </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>STR4. Muassasa turi</div>
                 <div>
-                    <input type="text" id="str4" name="str4"
-                        class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <div>
+                        <select id="str4" name="str4"
+                            class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
+                            <option value="0" selected>--</option>
+                            <option value="11" class="t_institution_type_option_11"></option>
+                            <option value="12" class="t_institution_type_option_12"></option>
+                            <option value="13" class="t_institution_type_option_13"></option>
+                            <option value="14" class="t_institution_type_option_14"></option>
+                            <option value="15" class="t_institution_type_option_15"></option>
+                            <option value="16" class="t_institution_type_option_16"></option>
+                            <option value="17" class="t_institution_type_option_17"></option>
+                        </select>
+                    </div>
                 </div>
             </div>
 
@@ -394,8 +394,6 @@
                         class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
                 </div>
             </div>
-
-            <p class="mt-6">d. Maʼmuriy-hududiy birlikning 10 xonali kodini toʻldiring (MHOBT)</p>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
                 <div>e. Viloyat:</div>
