--- a/src/pages/instruments/02_cibs.html
+++ b/src/pages/instruments/02_cibs.html
@@ -50,6 +50,9 @@
                                 <span class="t_last_name"></span>
                             </th>
                             <th scope="col" class="px-6 py-3">
+                                <span class="t_status"></span>
+                            </th>
+                            <th scope="col" class="px-6 py-3">
                                 <span class="t_actions"></span>
                             </th>
                         </tr>
