--- a/src/pages/instruments/03_csr.html
+++ b/src/pages/instruments/03_csr.html
@@ -47,6 +47,9 @@
                                 <span class="t_euid"></span>
                             </th>
                             <th scope="col" class="px-6 py-3">
+                                <span class="t_status"></span>
+                            </th>
+                            <th scope="col" class="px-6 py-3">
                                 <span class="t_actions"></span>
                             </th>
                         </tr>
