scos City / Village

--- a/src/pages/instruments/02_cibs_en.html
+++ b/src/pages/instruments/02_cibs_en.html
@@ -1280,7 +1280,7 @@
             </div>
 
 
-            <p class="mt-6">b. Legal domicile - City/Village:</p>
+            <p class="mt-6">b. Legal domicile:</p>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
                 <div>c. Region:</div>
@@ -1869,7 +1869,7 @@
             </div>
 
 
-            <p class="mt-6">b. Legal domicile - City/Village:</p>
+            <p class="mt-6">b. Legal domicile:</p>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
                 <div>c. Region:</div>
@@ -2467,7 +2467,7 @@
             </div>
 
 
-            <p class="mt-6">b. Legal domicile - City/Village:</p>
+            <p class="mt-6">b. Legal domicile:</p>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
                 <div>c. Region:</div>
