--- a/src/pages/instruments/02_cibs_ru.html
+++ b/src/pages/instruments/02_cibs_ru.html
@@ -1276,7 +1276,7 @@
             </div>
 
 
-            <p class="mt-6">б. Регистрация по месту жительства - Город/Деревня:</p>
+            <p class="mt-6">б. Регистрация по месту жительства:</p>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
                 <div>в. Область:</div>
@@ -1866,7 +1866,7 @@
             </div>
 
 
-            <p class="mt-6">б. Регистрация по месту жительства - Город/Деревня:</p>
+            <p class="mt-6">б. Регистрация по месту жительства:</p>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
                 <div>в. Область:</div>
@@ -2466,7 +2466,7 @@
             </div>
 
 
-            <p class="mt-6">б. Регистрация по месту жительства - Город/Деревня:</p>
+            <p class="mt-6">б. Регистрация по месту жительства:</p>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
                 <div>в. Область:</div>
