tipuri de institutii

--- a/src/pages/instruments/03_csr_uz.html
+++ b/src/pages/instruments/03_csr_uz.html
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                    <div>I4c. Settlement</div>
+                    <div>I4c. Aholi punkti</div>
                     <div>
                         <select id="i4c" name="i4c"
                             class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -139,7 +139,7 @@
                     </div>
                 </div>
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                    <div>I4d. Type of settlement</div>
+                    <div>I4d. Aholi punkti turi</div>
                     <div>
                         <select id="i4d" name="i4d"
                             class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
