--- a/src/pages/instruments/04_qmr_en.html
+++ b/src/pages/instruments/04_qmr_en.html
@@ -144,29 +144,30 @@
                     </select>
                 </div>
             </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>I4c. Settlement</div>
+                <div>
+                    <select id="i4c" name="i4c"
+                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                        <option value="-9" class="t_choose">--- choose ---</option>
+                    </select>
+                </div>
+            </div>
 
             <input type="hidden" id="i4d" name="i4d" />
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>I9. Type of institution</div>
                 <div>
-                    <select id="i9" name="i9"
-                        class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
-                        <option selected>Please select one of the following codes</option>
-                        <optgroup label="Childcare institutions:">
-                            <option value="11">11. Children&#39;s home (Baby home)</option>
-                            <option value="12">12. Mehribonlik house</option>
-                            <option value="13">13. Muruvat house for children with disabilities</option>
-                        </optgroup>
-                        <optgroup label="Boarding schools:">
-                            <option value="21">21. Type I-II for deaf or with hearing impairments children</option>
-                            <option value="22">22. Type III-IV for blind or visually impaired children</option>
-                            <option value="23">23. Type V for children with severe speech impairments</option>
-                            <option value="24">24. Type VI for children with musculoskeletal disorders</option>
-                            <option value="25">25. Type VII for children with slow mental development/mental disorders
-                            </option>
-                            <option value="26">26. Type VIII for children with intellectual disabilities</option>
-                        </optgroup>
+                    <select id="i9" name="i9" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
+                        <option value="0" selected>--</option>
+                        <option value="11" class="t_institution_type_option_11"></option>
+                        <option value="12" class="t_institution_type_option_12"></option>
+                        <option value="13" class="t_institution_type_option_13"></option>
+                        <option value="14" class="t_institution_type_option_14"></option>
+                        <option value="15" class="t_institution_type_option_15"></option>
+                        <option value="16" class="t_institution_type_option_16"></option>
+                        <option value="17" class="t_institution_type_option_17"></option>
                     </select>
                 </div>
             </div>
