--- a/src/pages/instruments/02_cibs_en.html
+++ b/src/pages/instruments/02_cibs_en.html
@@ -158,8 +158,16 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>OMR10. Type of specialized educational institution</div>
                 <div>
-                    <input type="text" id="omr10" name="omr10"
-                        class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <select id="omr10" name="omr10" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
+                        <option value="0" selected>--</option>
+                        <option value="11" class="t_institution_type_option_11"></option>
+                        <option value="12" class="t_institution_type_option_12"></option>
+                        <option value="13" class="t_institution_type_option_13"></option>
+                        <option value="14" class="t_institution_type_option_14"></option>
+                        <option value="15" class="t_institution_type_option_15"></option>
+                        <option value="16" class="t_institution_type_option_16"></option>
+                        <option value="17" class="t_institution_type_option_17"></option>
+                    </select>
                 </div>
             </div>
 
