--- a/src/pages/instruments/07_ftch_uz.html
+++ b/src/pages/instruments/07_ftch_uz.html
@@ -56,15 +56,17 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-12">
                 <div>REG. Viloyat</div>
                 <div>
-                    <input type="text" id="reg" name="reg"
-                        class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <select id="reg" name="reg" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                        <option value="-9" class="t_choose">--- choose ---</option>
+                    </select>
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>DIS. Tuman</div>
                 <div>
-                    <input type="text" id="dis" name="dis"
-                        class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <select id="dis" name="dis" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                        <option value="-9" class="t_choose">--- choose ---</option>
+                    </select>
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
@@ -154,22 +156,8 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>IFP1d. Type of settlement</div>
-                <div>
-                    <select id="ifp1d" name="ifp1d"
-                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                        <option value="-9" class="t_choose"></option>
-                        <option value="10" class="t_settlement_type_10"></option>
-                        <option value="20" class="t_settlement_type_20"></option>
-                        <option value="21" class="t_settlement_type_21"></option>
-                        <option value="22" class="t_settlement_type_22"></option>
-                        <option value="23" class="t_settlement_type_23"></option>
-                        <option value="24" class="t_settlement_type_24"></option>
-                        <option value="31" class="t_settlement_type_31"></option>
-                    </select>
-                </div>
-            </div>
+
+            <input type="hidden" id="ifp1d" name="ifp1d" />
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>IFP2. Oilaviy bolalar uyi tashkil etilgan sana: oy, yil:</div>
