--- a/src/pages/instruments/04_qmr_ru.html
+++ b/src/pages/instruments/04_qmr_ru.html
@@ -149,7 +149,7 @@
                 <div>
                     <select id="i4c" name="i4c"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                        <option value="-9" class="t_choose">--- choose ---</option>
+                        <option value="0" selected>--</option>
                     </select>
                 </div>
             </div>
