--- a/src/pages/instruments/09_eef_uz.html
+++ b/src/pages/instruments/09_eef_uz.html
@@ -83,54 +83,45 @@
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
                     <div>I4a. Viloyat</div>
                     <div>
-                        <input type="text" id="i4a" name="i4a"
-                               class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        <select id="i4a" name="i4a"
+                            class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                            <option value="-9" class="t_choose">--- choose ---</option>
+                        </select>
                     </div>
                 </div>
-
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
                     <div>I4b. Tuman</div>
                     <div>
-                        <input type="text" id="i4b" name="i4b"
-                               class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        <select id="i4b" name="i4b"
+                            class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                            <option value="-9" class="t_choose">--- choose ---</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                    <div>I4c. Aholi punkti</div>
+                    <div>
+                        <select id="i4c" name="i4c"
+                            class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                            <option value="0" selected>--</option>
+                        </select>
                     </div>
                 </div>
 
-                <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                    <div>I4c. undefined</div>
-                    <div>
-                        <input type="text" id="i4c" name="i4c"
-                               class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                    </div>
-                </div>
-
-                <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                    <div>I4d. undefined</div>
-                    <div>
-                        <input type="text" id="i4d" name="i4d"
-                               class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                    </div>
-                </div>
+                <input type="hidden" id="i4d" name="i4d" />
 
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
                     <div>I9. Tashkilot turi</div>
                     <div>
-                        <select id="i9" name="i9"
-                                class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
-                            <option selected>Quyidagi kodlardan birini tanlang</option>
-                            <optgroup label="Bolalar muassasasi:">
-                                <option value="11">11. Bolalar uyi (Bola uyi))</option>
-                                <option value="12">12. Mehribonlik uyi</option>
-                                <option value="13">13. Nogironligi mavjud bolalar uchun &quot;Muruvat&quot; internat uylari</option>
-                            </optgroup>
-                            <optgroup label="Maktab-internatlar:">
-                                <option value="21">21. Kar yoki eshitish qobiliyati zaif bolalar uchun I-II toifa</option>
-                                <option value="22">22. Ko&#39;zi ojiz yoki zaif ko&#39;ruvchi bolalar uchun III-IV toifa</option>
-                                <option value="23">23. Og&#39;ir nutq nuqsonlari bo&#39;lgan bolalar uchun V toifa</option>
-                                <option value="24">24. Tayanch-harakat apparati nuqsonlari bo&#39;lgan bolalar uchun VI toifa</option>
-                                <option value="25">25. Aqliy rivojlanishi sust/ruhiy buzuqliklari bo&#39;lgan bolalar uchun VII toifa</option>
-                                <option value="26">26. Intelektual imkoniyatlri cheklangan bolalar uchun VIII toifa</option>
-                            </optgroup>
+                        <select id="i9" name="i9" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
+                            <option value="0" selected>--</option>
+                            <option value="11" class="t_institution_type_option_11"></option>
+                            <option value="12" class="t_institution_type_option_12"></option>
+                            <option value="13" class="t_institution_type_option_13"></option>
+                            <option value="14" class="t_institution_type_option_14"></option>
+                            <option value="15" class="t_institution_type_option_15"></option>
+                            <option value="16" class="t_institution_type_option_16"></option>
+                            <option value="17" class="t_institution_type_option_17"></option>
                         </select>
                     </div>
                 </div>
