--- a/src/pages/instruments/01_cpis_ru.html
+++ b/src/pages/instruments/01_cpis_ru.html
@@ -261,7 +261,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>LK14d. Урегулирование</div>
+                <div>LK14d. Пункт населения</div>
                 <div>
                     <select id="lk14d" name="lk14d"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -535,7 +535,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>CM3d. Урегулирование</div>
+                <div>CM3d. Пункт населения</div>
                 <div>
                     <select id="cm3d" name="cm3d"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -1226,7 +1226,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>CM10e. Урегулирование</div>
+                <div>CM10e. Пункт населения</div>
                 <div>
                     <select id="cm10e" name="cm10e"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -1290,7 +1290,7 @@
             </div>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>e. Урегулирование</div>
+                <div>e. Пункт населения</div>
                 <div>
                     <select id="cm11e" name="cm11e"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -1528,7 +1528,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>CT3d. Урегулирование</div>
+                <div>CT3d. Пункт населения</div>
                 <div>
                     <select id="ct3d" name="ct3d"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -2211,7 +2211,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>e. Урегулирование</div>
+                <div>e. Пункт населения</div>
                 <div>
                     <select id="ct10e" name="ct10e"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -2275,7 +2275,7 @@
             </div>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>e. Урегулирование</div>
+                <div>e. Пункт населения</div>
                 <div>
                     <select id="ct11e" name="ct11e"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -2309,6 +2309,19 @@
             <small class="block italic text-red-500">Этот раздел заполняется только в том случае, если до поступления в
                 систему ребенок находился под опекой кого-либо, кроме матери или отца ребенка. В ином случае перейдите к
                 разделу 4.</small>
+
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>
+                    CG0.
+                </div>
+                <div class="flex gap-4">
+                    <input id="cg0" name="cg0" type="checkbox" value="9"
+                        class="w-4 h-4 text-blue-600 border-gray-400 rounded focus:ring-blue-500 disabled:bg-gray-100">
+                    <label for="cg0" class="ms-2 text-sm text-gray-900"> &quot;Проверяйте только, если до поступления в
+                        интернат ребенок находился под опекой кого-либо, кроме матери или отца ребенка. В противном
+                        случае перейдите к разделу 4.&quot; </label>
+                </div>
+            </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>CG1a. Каково взаимоотношение между ребенком и лицом, которое заботится о нем?</div>
@@ -3142,7 +3155,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>e. Урегулирование</div>
+                <div>e. Пункт населения</div>
                 <div>
                     <select id="cg10e" name="cg10e"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -3200,7 +3213,7 @@
             </div>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>e. Урегулирование</div>
+                <div>e. Пункт населения</div>
                 <div>
                     <select id="cg11e" name="cg11e"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -3318,7 +3331,7 @@
             </div>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>SA3c. Урегулирование</div>
+                <div>SA3c. Пункт населения</div>
                 <div>
                     <select id="sa3c" name="sa3c"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
