--- a/src/pages/instruments/06_dsee_en.html
+++ b/src/pages/instruments/06_dsee_en.html
@@ -984,15 +984,15 @@
                                 the reference year (2023)</p>
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="tnr1_b" name="tnr1_b" readonly
+                            <input type="text" id="tnr1_b" name="tnr1_b"
                                 class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="tnr1_g" name="tnr1_g" readonly
+                            <input type="text" id="tnr1_g" name="tnr1_g"
                                 class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="tnr1_t" name="tnr1_t" readonly
+                            <input type="text" id="tnr1_t" name="tnr1_t"
                                 class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                         </td>
                     </tr>
