--- a/src/pages/instruments/06_dsee_ru.html
+++ b/src/pages/instruments/06_dsee_ru.html
@@ -51,42 +51,42 @@
             <p class="mb-2">Примерное среднее время выполнения: 40 минут</p>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div>Q1 Дата заполнения анкеты</div>
+                <div>Q1. Дата заполнения анкеты</div>
                 <div>
                     <input type="text" id="q1" name="q1"
                         class="disabled:bg-gray-100 bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
-                <div>Q2 Имя, отчество и фамилия лица, заполнившего анкету</div>
+                <div>Q2. Имя, отчество и фамилия лица, заполнившего анкету</div>
                 <div>
                     <input type="text" id="q2" name="q2"
                         class="disabled:bg-gray-100 bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
-                <div>Q3 Должность</div>
+                <div>Q3. Должность</div>
                 <div>
                     <input type="text" id="q3" name="q3"
                         class="disabled:bg-gray-100 bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
-                <div>Q4 Профессия</div>
+                <div>Q4. Профессия</div>
                 <div>
                     <input type="text" id="q4" name="q4"
                         class="disabled:bg-gray-100 bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
-                <div>Q5 Телефон</div>
+                <div>Q5. Телефон</div>
                 <div>
                     <input type="text" id="q5" name="q5"
                         class="disabled:bg-gray-100 bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
-                <div>Q6 Электронная почта</div>
+                <div>Q6. Электронная почта</div>
                 <div>
                     <input type="text" id="q6" name="q6"
                         class="disabled:bg-gray-100 bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
