--- a/src/pages/instruments/06_dsee_en.html
+++ b/src/pages/instruments/06_dsee_en.html
@@ -50,42 +50,42 @@
             <p class="mb-2">Approximate average completion time: 40 minutes</p>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div>Q1 Completion date of questionnaire</div>
+                <div>Q1. Completion date of questionnaire</div>
                 <div>
                     <input type="text" id="q1" name="q1"
                         class="disabled:bg-gray-100 bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
-                <div>Q2 Name, patronymics, and surname of the person who filled in the questionnaire</div>
+                <div>Q2. Name, patronymics, and surname of the person who filled in the questionnaire</div>
                 <div>
                     <input type="text" id="q2" name="q2"
                         class="disabled:bg-gray-100 bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
-                <div>Q3 Job title</div>
+                <div>Q3. Job title</div>
                 <div>
                     <input type="text" id="q3" name="q3"
                         class="disabled:bg-gray-100 bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
-                <div>Q4 Profession</div>
+                <div>Q4. Profession</div>
                 <div>
                     <input type="text" id="q4" name="q4"
                         class="disabled:bg-gray-100 bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
-                <div>Q5 Phone</div>
+                <div>Q5. Phone</div>
                 <div>
                     <input type="text" id="q5" name="q5"
                         class="disabled:bg-gray-100 bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
-                <div>Q6 E-mail</div>
+                <div>Q6. E-mail</div>
                 <div>
                     <input type="text" id="q6" name="q6"
                         class="disabled:bg-gray-100 bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
