--- a/src/pages/instruments/01_cpis_uz.html
+++ b/src/pages/instruments/01_cpis_uz.html
@@ -7674,34 +7674,39 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-10">
+            <div class="grid grid-cols-2 gap-4 mt-10">
                 <div>
-                    SK3. Bolaning vasiylik h tizimida aka-uka va/yoki opa-singillari mavjudmi? Ha bo&#39;lsa, nechta
-                    aka-uka va nechta opa-singil? </div>
+                    SK3. Bolaning bolalarni himoya qilish tizimida yoki maktab-internatlarda aka-uka va/yoki
+                    opa-singillari bormi? Ha bo&#39;lsa, nechta aka-uka va nechta opa-singil? </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="sk3-1" type="radio" value="1" name="sk3"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="sk3-1" class="ms-2 text-sm text-gray-900">1. Ha, aka-ukalari</label>
+                        <label for="sk3-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
                     </div>
-                    <input type="text" id="sk3_1" name="sk3_1"
-                        class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                    <div class="flex items-center">
-                        <input id="sk3-2" type="radio" value="2" name="sk3"
-                            class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="sk3-2" class="ms-2 text-sm text-gray-900">2. Ha, opa-singillari</label>
+                    <div class="grid grid-cols-2 gap-4 items-center">
+                        <div class="text-sm text-gray-700 text-center">Aka-ukalar</div>
+                        <div class="text-sm text-gray-700 text-center">Opa-singillar</div>
                     </div>
-                    <input type="text" id="sk3_2" name="sk3_2"
-                        class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <div class="grid grid-cols-2 gap-4 items-center">
+                        <div>
+                            <input type="text" id="sk3_1" name="sk3_1"
+                                class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        </div>
+                        <div>
+                            <input type="text" id="sk3_2" name="sk3_2"
+                                class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        </div>
+                    </div>
                     <div class="flex items-center">
                         <input id="sk3-3" type="radio" value="3" name="sk3"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="sk3-3" class="ms-2 text-sm text-gray-900">3. Na aka-uka, na opa-singillari</label>
+                        <label for="sk3-3" class="ms-2 text-sm text-gray-900">3. Na aka-uka, na opa-singillar</label>
                     </div>
                     <div class="flex items-center">
                         <input id="sk3-4" type="radio" value="9" name="sk3"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="sk3-4" class="ms-2 text-sm text-gray-900">9. Aniqlanmagan/Noma&#39;lum</label>
+                        <label for="sk3-4" class="ms-2 text-sm text-gray-900">9. Ko&#39;rsatilmagan/Noma&#39;lum</label>
                     </div>
                 </div>
             </div>
